syntax = "proto3";
package ET;

//ResponseType M2C_TestResponse
message C2M_TestRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	string request = 1;
}

message M2C_TestResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string response = 1;
}

//ResponseType Actor_TransferResponse
message Actor_TransferRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int32 MapIndex = 1;
}

message Actor_TransferResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2C_EnterMap
message C2G_EnterMap // IRequest
{
	int32 RpcId = 90;
}

message G2C_EnterMap // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	// 自己的unit id
	int64 UnitId = 1;
	// 所有的unit
	repeated UnitInfo Units = 2;
}

message UnitInfo
{
	int64 UnitId  = 1;

	float X = 2;
	float Y = 3;
	float Z = 4;
}

message M2C_CreateUnits // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
    repeated UnitInfo Units = 1;
}

message Frame_ClickMap // IActorLocationMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int64 Id = 94;
	
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message M2C_PathfindingResult // IActorMessage
{
	int64 ActorId = 93;
	
	int64 Id = 1;

	float X = 2;
	float Y = 3;
	float Z = 4;
	
	repeated float Xs = 5;
	repeated float Ys = 6;
	repeated float Zs = 7;
}

//ResponseType G2C_Ping
message C2G_Ping // IRequest
{
	int32 RpcId = 90;
}

message G2C_Ping // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	
	int64 Time = 1;
}


message G2C_Test // IMessage
{
}

//ResponseType M2C_Reload
message C2M_Reload // IRequest
{
	int32 RpcId = 90;
	string Account = 1;
	string Password = 2;
}

message M2C_Reload // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType R2C_Login
message C2R_Login // IRequest
{
	int32 RpcId = 90;
	string	Account	 = 1;	// 帐号
	string	Password = 2;	// 密码
}

message R2C_Login // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Address = 1;
	int64 Key	    = 2;
	int64 GateId = 3;
}

//ResponseType G2C_JoinGuild
message C2G_JoinGuild // IRequest
{
	int32 RpcId = 90;
	int64 Id = 1;
}

message G2C_JoinGuild // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2C_SearchGuild
message C2G_SearchGuild // IRequest
{
	int32 RpcId = 90;
	string Name = 1;
	int64 Id = 2;
	int32 MinLevel = 3;
	int16 Language = 4;
	int32 TimeZone = 5;
	int32 MaxNum = 6;
	bool IsNewSearch = 7;
}

message G2C_SearchGuild // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	repeated SearchGuildResult Results = 1;
}

//ResponseType G2C_CreateGuild
message C2G_CreateGuild //IRequest
{
	int32 RpcId = 90;
	string Name = 1;
	int32 Frame = 2;
	int32 Inside = 3;
	bool IsPublic = 4;
	int16 Language = 5;
	string Desc = 6;
	int32 MinLevel = 7;
}

message G2C_CreateGuild //IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

//ResponseType G2C_GuildUpdate
message C2G_GuildUpdate //IRequest
{
	int32 RpcId = 90;
	string Name = 2;
	int32 Frame = 3;
	int32 Inside = 4;
	bool IsPublic = 5;
	int16 Language = 6;
	string Desc = 7;
	int32 MinLevel = 8;
	string OwnerId = 9;
}

message G2C_GuildUpdate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	int64 Id = 1;
	string Name = 2;
	int32 Frame = 3;
	int32 Inside = 4;
	uint32 CreateTime = 5;
	bool IsPublic = 6;
	int16 Language = 7;
	string Desc = 8;
	int32 MinLevel = 9;
	string OwnerId = 10;
	repeated MemberInfo Members = 11;
	repeated ApplicationInfo ApplicationList = 12;
}

message ApplicationInfo
{
	uint32 Time = 1;
	string Id = 2;
}

message MemberInfo
{
	string Id = 1;
	string Name = 2;
	int32 Level = 3;
	uint32 LastLogin = 4;
	uint32 JoinTime = 5;
	int16 Language = 6;
	int32 TimeZone = 7;
	string Icon = 8;
	repeated int32 DressUp = 9;
	int32 Hornor = 10;
}

message SearchGuildResult
{
	int64 Id = 1;
	string Name = 2;
	string Desc = 3;
	string Outer = 4;
	string Frame = 5;
}

//ResponseType G2C_LoginGate
message C2G_LoginGate // IRequest
{
	int32 RpcId = 90;
	int64 Key = 1;	// 帐号
	int64 GateId = 2;
}

message G2C_LoginGate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	int64 PlayerId = 1;
}

message G2C_TestHotfixMessage // IMessage
{
	string Info = 1;
}

//ResponseType M2C_TestActorResponse
message C2M_TestActorRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 91;
	string Info = 1;
}

message M2C_TestActorResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Info = 1;
}

message PlayerInfo // IMessage
{
	int32 RpcId = 90;
}

//ResponseType G2C_PlayerInfo
message C2G_PlayerInfo // IRequest
{
	int32 RpcId = 90;
}

message G2C_PlayerInfo // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	PlayerInfo PlayerInfo = 1;
	repeated PlayerInfo PlayerInfos = 2;
    repeated string TestRepeatedString = 3;
    repeated int32 TestRepeatedInt32 = 4;
    repeated int64 TestRepeatedInt64 = 5;
}